--- a/LessonPlans/UIExample/MainWindow.xaml
+++ b/LessonPlans/UIExample/MainWindow.xaml
@@ -35,7 +35,7 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.ColumnSpan="5" Foreground="Black" Background="Wheat">
+                <Label Grid.ColumnSpan="5" Foreground="Black" Background="Wheat" Content="Example UI!&#x9;&#x9;&#x9;Hello There!&#x9;&#x9;&#x9;WOOOHOOOO!&#x9;&#x9;&#x9;I LOVE TACOS!&#x9;">
                 </Label>
             </Grid>
 
@@ -48,7 +48,7 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
 
-                <Label Grid.ColumnSpan="5" Foreground="Black" Background="Wheat">
+                <Label Grid.ColumnSpan="5" Foreground="Black" Background="Wheat" Content="I HAS FEET">
                 </Label>
             </Grid>
 
@@ -69,10 +69,18 @@
                     <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
 
-                <Button Background="SteelBlue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" >
+                <Button x:Name="HomeButton" Background="SteelBlue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" >
                     <TextBlock>
                         <TextBlock.Text>
                             Home
+                        </TextBlock.Text>
+                    </TextBlock>
+                </Button>
+                
+                <Button Grid.Row="1" x:Name="MagicButton" Background="SteelBlue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" >
+                    <TextBlock>
+                        <TextBlock.Text>
+                            The Magic Starts Here!
                         </TextBlock.Text>
                     </TextBlock>
                 </Button>
