--- a/TestBlazorApp/Shared/NavMenu.razor
+++ b/TestBlazorApp/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-arrow-thick-bottom" aria-hidden="true"></span> Test
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="plantcatalogue">
+                <span class="oi oi-sun" aria-hidden="true"></span> Plant Catalogue
+            </NavLink>
+        </li>
     </ul>
 </div>
 
