--- a/UIExample/MainWindow.xaml
+++ b/UIExample/MainWindow.xaml
@@ -26,7 +26,8 @@
                 <RowDefinition x:Name="GridFooter" Height=".3*"/>
             </Grid.RowDefinitions>
 
-            <Button Content="UWU" Grid.Column="2" Grid.Row="3" Background="Bisque">
+            <Button x:Name="UWUbutton" Content="UWU" Grid.Column="2" Grid.Row="3" Background="Bisque">
+                
                 
             </Button>
 
