--- a/TestBlazorApp/Pages/PlantCatalogue.razor
+++ b/TestBlazorApp/Pages/PlantCatalogue.razor
@@ -1,5 +1,6 @@
 ﻿@page "/plantcatalogue"
 @using TestBlazorApp.Data
+@inject MockPlantProvider Provider
 <style>
     body {
         background-color: olivedrab;
@@ -46,8 +47,8 @@ else
     protected override async Task OnInitializedAsync()
     {
         await Task.Run(() => { System.Threading.Thread.Sleep(3000); });
-        MockPlantProvider provider = new MockPlantProvider();
-        PlantModels = await provider.GetPlantModelAsync(2 , 10);
+        
+        PlantModels = await Provider.GetPlantModelAsync(2 , 10);
     }
 
 }
