Added basic UI elements
Modified the MockPlantProvider class since it uses a substantial amount of logic. Using a lambda expression since it's super simple to implement. It's more advanced than what we've been using so far, but good to take a look at!

Added an ID field to all PlantModels, so we can sort easier and decided on a 1-based index to make it more like a real database.

The next task is to use the drop down as a way to select the "amount" of items, rather than the index of the item. Using it as the index was useful to test with, but it's definitely not what we want.

--- a/TestBlazorApp/Pages/PlantCatalogue.razor
+++ b/TestBlazorApp/Pages/PlantCatalogue.razor
@@ -1,5 +1,6 @@
 ﻿@page "/plantcatalogue"
 @using TestBlazorApp.Data
+@using TestBlazorApp.InputModels
 @inject MockPlantProvider Provider
 <style>
     body {
@@ -8,8 +9,21 @@
 </style>
 <h1>Plant Catalogue</h1>
 <h4>For all of your planting needs!</h4>
+<EditForm Model="inputModel">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
+    <label>
+        <InputSelect @bind-Value="inputModel.ID">
+            @for (int i = 1; i <= inputModel.MaxValue; i++)
+            {
+                <option value="@i">@i</option>
+            }
+        </InputSelect>
+    </label>
 
-<button class="btn btn-primary" @onclick="GetData">Plant Button</button>
+    <button class="btn btn-primary" @onclick="GetData">Plant Button</button>
+</EditForm>
+
 
 @if (PlantModels == null && isLoading == false)
 {
@@ -50,18 +64,22 @@ else
 @code {
     private PlantModel[] PlantModels;
 
+    private DropDownItemSelector inputModel = new DropDownItemSelector();
+
     private bool isLoading = false;
     
     protected override async Task OnInitializedAsync()
     {
 
     }
+
     private async Task GetData()
     {
         isLoading = true;
         await Task.Run(() => { System.Threading.Thread.Sleep(3000); });
 
-        PlantModels = await Provider.GetPlantModelAsync(2, 10);
+        int startValue = Convert.ToInt32(inputModel.ID);
+        PlantModels = await Provider.GetPlantModelAsync(startValue, 10);
         isLoading = false;
     }
 
